// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainNav tabBarIcon component should render the tab bar icon for FindLoads focused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#007DBA"
  id="FindLoads"
  indicator="#007DBA"
  main={true}
  mainIconColor="#EFEFEF"
  name="jbh-Search"
  onPress={[Function]}
  size={25}
  tintColor="#007DBA"
  title="Find Loads"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for FindLoads unfocused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#EFEFEF"
  id="FindLoads"
  indicator="transparent"
  main={true}
  mainIconColor="#939393"
  name="jbh-Search"
  onPress={[Function]}
  size={25}
  tintColor="#939393"
  title="Find Loads"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Home focused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#EFEFEF"
  id="Home"
  indicator="#007DBA"
  main={false}
  mainIconColor="#007DBA"
  name="jbh-Home"
  onPress={[Function]}
  size={25}
  tintColor="#007DBA"
  title="Home"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Home unfocused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#FFFFFF"
  id="Home"
  indicator="transparent"
  main={false}
  mainIconColor="#939393"
  name="jbh-Home"
  onPress={[Function]}
  size={25}
  tintColor="#939393"
  title="Home"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for MyLoads focused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#EFEFEF"
  id="MyLoads"
  indicator="#007DBA"
  main={false}
  mainIconColor="#007DBA"
  name="jbh-Trailers"
  onPress={[Function]}
  size={25}
  tintColor="#007DBA"
  title="My Loads"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for MyLoads unfocused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#FFFFFF"
  id="MyLoads"
  indicator="transparent"
  main={false}
  mainIconColor="#939393"
  name="jbh-Trailers"
  onPress={[Function]}
  size={25}
  tintColor="#939393"
  title="My Loads"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Offers focused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#EFEFEF"
  id="Offers"
  indicator="#007DBA"
  main={false}
  mainIconColor="#007DBA"
  name="jbh-Tag"
  onPress={[Function]}
  size={25}
  tintColor="#007DBA"
  title="Offers"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Offers unfocused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#FFFFFF"
  id="Offers"
  indicator="transparent"
  main={false}
  mainIconColor="#939393"
  name="jbh-Tag"
  onPress={[Function]}
  size={25}
  tintColor="#939393"
  title="Offers"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Perks focused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#EFEFEF"
  id="Perks"
  indicator="#007DBA"
  main={false}
  mainIconColor="#007DBA"
  name="jbh-Perks"
  onPress={[Function]}
  size={25}
  tintColor="#007DBA"
  title="Perks"
  virtual={undefined}
/>
`;

exports[`MainNav tabBarIcon component should render the tab bar icon for Perks unfocused 1`] = `
<Styled(C360TabButton)
  backgroundColor="#FFFFFF"
  id="Perks"
  indicator="transparent"
  main={false}
  mainIconColor="#939393"
  name="jbh-Perks"
  onPress={[Function]}
  size={25}
  tintColor="#939393"
  title="Perks"
  virtual={undefined}
/>
`;
